--- a/package.json
+++ b/package.json
@@ -4,10 +4,40 @@
 	"description": "a web player",
 	"main": "index.js",
 	"scripts": {
-		"start": "",
-		"build": "",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "npm run serve",
+		"serve": "webpack-dev-server",
+		"build": "webpack --mode production --progress",
+		"test": "serve ./dist"
 	},
 	"author": "zhenghy",
-	"license": "ISC"
+	"license": "ISC",
+	"dependencies": {
+		"flv.js": "^1.6.2",
+		"hls.js": "^1.0.10",
+		"swiper": "^7.0.6",
+		"vconsole": "^3.3.4"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/plugin-transform-runtime": "^7.11.0",
+		"@babel/preset-env": "^7.9.5",
+		"babel-loader": "^8.1.0",
+		"babel-polyfill": "^6.26.0",
+		"clean-webpack-plugin": "^3.0.0",
+		"css-loader": "^3.5.1",
+		"es6-promise": "^4.2.8",
+		"eslint": "^6.8.0",
+		"file-loader": "^6.0.0",
+		"html-webpack-plugin": "^4.0.4",
+		"less": "^3.11.1",
+		"less-loader": "^5.0.0",
+		"raw-loader": "^4.0.2",
+		"style-loader": "^1.1.3",
+		"terser-webpack-plugin": "^4.1.0",
+		"uglifyjs-webpack-plugin": "^1.0.0-rc.0",
+		"url-loader": "^4.1.0",
+		"webpack": "^4.42.1",
+		"webpack-cli": "^3.3.11",
+		"webpack-dev-server": "^3.10.3"
+	}
 }
